update UserManagement